--- a/memcpy/CMakeLists.txt
+++ b/memcpy/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required(VERSION 3.22)
 
 # Set the project name and version
 project(MemcpyExample VERSION 1.0 LANGUAGES CXX)
+set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 set(SOURCE_FILES
     memcpy.cpp
